<resources>
    <string name="app_name">DietiDeals24</string>
    <string name="scelteIniziali_textView" translatable="false">If you want it,</string>
    <string name="scelteIniziali_textView2" translatable="false">get</string>
    <string name="scelteIniziali_textView3" translatable="false">it.</string>
    <string name="scelteIniziali_textView4" translatable="false">DietiDeals</string>
    <string name="scelteIniziale_textView5" translatable="false">24</string>
    <string name="scelteIniziali_accesibilitàLogo">Logo DietiDeals24</string>
    <string name="scelteIniziali_textView6">Log in as…</string>
    <string name="scelteIniziali_button">Buyer</string>
    <string name="scelteIniziali_button2">Seller</string>
    <string name="scelteInziali_textView7"><u>Log in as guest</u></string>
</resources>